--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.0",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -15,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
+    "prettier": "2.1.2",
     "typescript": "^4.0.5"
   }
 }
