--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "prettier": "2.1.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   }
 }
