Make ts config stricter
Co-authored-by: Menghan YANG <yangmenghan@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
     "module": "commonjs",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    "allowJs": false,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
