--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "prettier": "2.1.2",
