--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     },
     "dependencies": {
         "@types/mocha": "^8.0.3",
+        "@types/uuid": "^8.3.0",
         "chai": "^4.2.0",
         "mocha": "^8.2.0",
         "next": "10.0.0",
         "react": "17.0.1",
-        "react-dom": "17.0.1"
+        "react-dom": "17.0.1",
+        "uuid": "^8.3.1"
     },
     "devDependencies": {
         "@types/chai": "^4.2.14",
