--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "compile": "tsc",
         "dev": "next dev",
+        "lint": "eslint .",
         "build": "next build",
         "start": "next start",
         "test": "mocha"
@@ -23,8 +24,23 @@
         "@types/chai": "^4.2.14",
         "@types/node": "^14.14.6",
         "@types/react": "^16.9.55",
+        "@typescript-eslint/eslint-plugin": "^4.6.1",
+        "@typescript-eslint/parser": "^4.6.1",
+        "eslint": "^7.12.1",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "husky": ">=4",
+        "lint-staged": ">=10",
         "prettier": "2.1.2",
         "ts-node": "^9.0.0",
         "typescript": "^4.0.5"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
     }
 }
