--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "test": "mocha"
     },
     "dependencies": {
+        "@types/lodash": "^4.14.165",
         "@types/mocha": "^8.0.3",
         "@types/uuid": "^8.3.0",
         "chai": "^4.2.0",
+        "lodash": "^4.17.20",
         "mocha": "^8.2.0",
         "next": "10.0.0",
         "react": "17.0.1",
